--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,51 @@ body,
   margin: 0;
 }
 
+body, 
+input, 
+select, 
+textarea {
+  font-size: 1.6rem;
+  font-family: : Helvetica, Arial, sans-serif;
+}
+
 .grid-container {
   display: grid;
   grid-template-areas: 
   "header"
-  "footer"
-  "main";
+  "main"
+  "footer";
   grid-template-rows: 5rem 1fr 5rem;
   grid-template-columns: 1fr;
+  height: 100%;
+}
+
+a:hover {
+  color: #ff8000;
+}
+header {
+  grid-area: header;
+  background-color: #204030;
+  color: #ffffffff;
+  display: flex;
+  justify-content: center;
+  padding: 0.5rem;
+}
+
+header a{
+  color: #ffffffff;
+  text-decoration: none;
+}
+
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
+  background-color: #204030;
+  color: #ffffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
